<resources>
    <string name="app_name">CCE NOTES</string>
    <string name="cce_notes">CCE NOTES</string>
    <string name="name">Name</string>
    <string name="physics">Engineering Physics</string>
    <string name="chemistry">Engineering Chemistry</string>
    <string name="mechanics">Engineering Mechanics</string>
    <string name="graphics">Engineering Graphics</string>
    <string name="mathematics">Engineering Mathematics</string>
    <string name="basics_of_electrical">Basics of Electrical Engineering</string>
    <string name="basics_of_electronics">Basics of Electronics Engineering</string>
    <string name="basics_of_mechanical">Basics of Mechanical Engineering</string>
    <string name="basics_of_civil">Basics of Civil Engineering</string>
    <string name="computer_programing">Computer Programing</string>
    <string name="s2">S2</string>
    <string name="s4">S4</string>
    <string name="s6">S6</string>
    <string name="s8">S8</string>
    <string name="names">name</string>
    <string name="upload">Upload</string>
    <string name="enter_the_name_of_the_file">Enter the filename</string>
    <string name="upload_here">Upload Here</string>
    <string name="sign_in">Sign In</string>
    <string name="code_app_development_team">CODE App Development Team</string>
    <string name="app_developed_and_maintained_by_ncode_app_development_team_from_nchrist_college_of_engineering">App Developed and Maintained by CODE App Development Team from Christ College of Engineering</string>
    <string name="developers">Developers</string>
    <string name="jacob_ranjit">Jacob Ranjit</string>
    <string name="cyril_paul">Cyril Paul</string>
    <string name="simon_nelse">Simon Nelse</string>
    <string name="ashkar_yaseen_logo">Ashkar Yaseen(Logo)</string>
    <string name="todo">TODO</string>
    <string name="compiler_design">Compiler Design</string>
    <string name="computer_networks">Computer Networks</string>
    <string name="web_technology">Web Technology</string>
    <string name="principles_of_management">Principles of Management</string>
    <string name="design_and_analysis_of_algorithms">Design and Analysis of Algorithms</string>
    <string name="software_engineering_and_project_management">Software Engineering and Project Management</string>
    <string name="data_mining">Data Mining and Ware Housing</string>
    <string name="fuzzy_set_theory">Environment Impact Assessment</string>
    <string name="embedded_systems">Embedded Systems</string>
    <string name="principles_of_information_security">Principles of Information Security</string>
    <string name="mathematics2">Mathematics</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="digital_systems_lab">Digital Systems Lab</string>
    <string name="principles_of_database_design">Principles of Database Design</string>
    <string name="computer_organization_and_architecture">Computer Organization and Architecture</string>
    <string name="object_oriented_design_and_programming">Object Oriented Design and Programming</string>
    <string name="free_and_open_source_software_lab">Free and Open Source Software Lab</string>
    <string name="cce_notess">CCE NOTES</string>
    <string name="todoss">TODO</string>
    <string name="business_economics">Business Economics</string>
    <string name="enter_the_name">Enter the Name</string>

</resources>
