<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SFourSubjects">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/s4_btn_OS_id"
                style="@style/button_theme"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operating_systems" />

            <Button
                android:id="@+id/s4_btn_DSL_id"
                style="@style/button_theme"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/digital_systems_lab" />

            <Button
                android:id="@+id/s4_btn_BE_id"
                style="@style/button_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business_economics" />

            <Button
                android:id="@+id/s4_btn_maths_id"
                style="@style/button_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mathematics" />

            <Button
                android:id="@+id/s4_btn_PDD_id"
                style="@style/button_theme"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/principles_of_database_design" />

            <Button
                android:id="@+id/s4_btn_FAOSSL_id"
                style="@style/button_theme"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/free_and_open_source_software_lab" />

            <Button
                android:id="@+id/s4_btn_COAA_id"
                style="@style/button_theme"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computer_organization_and_architecture" />

            <Button
                android:id="@+id/s4_btn_OPDAP_id"
                style="@style/button_theme"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/object_oriented_design_and_programming" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>