<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SSixSubjects">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/s6_btn_WT_id"
                style="@style/button_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/web_technology" />

            <Button
                android:id="@+id/s6_btn_CD_id"
                style="@style/button_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compiler_design"
                />

            <Button
                android:id="@+id/s6_btn_CN_id"
                style="@style/button_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/computer_networks" />

            <Button
                android:id="@+id/s6_btn_POM_id"
                style="@style/button_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/principles_of_management" />

            <Button
                android:id="@+id/s6_btn_DAAOA_id"
                style="@style/button_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/design_and_analysis_of_algorithms" />

            <Button
                android:id="@+id/s6_btn_SEAPM_id"
                style="@style/button_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/software_engineering_and_project_management" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>